[package]
name = "mock-etcd-service"
version = "0.1.0"
authors = ["Zheng Pan <zhengpan@google.com>"]
edition = "2018"
keywords = ["etcd"]
repository = "https://github.com/datenlord/mock-etcd-service"
description = "mock etcd"
license = "MIT"
categories = ["storage"]

[dependencies]
async-lock = "2.3.0"
async-compat = "0.1.4"
env_logger = "0.8.1"
etcd-rs = "0.3.0"
futures = "0.3.5"
grpcio = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
log = "0.4.11"
protobuf = "2.16.2"
smol = { version = "1.2.4" }
utilities = { git = "https://github.com/datenlord/utilities" }


[build-dependencies]
protoc-grpcio = "2.0.0"